[project]
name = "dots-tui"
version = "2.3.20"
description = "Textual TUI installer for Hyprland-Dots"
requires-python = ">=3.11"
dependencies = ["textual>=0.50.0"]

[project.scripts]
dots-tui = "dots_tui.app:run"

[dependency-groups]
dev = [
  "basedpyright>=1.24.0",
  "pyinstaller>=6.0.0",
  "ruff>=0.14.13",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "textual-dev>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dots_tui"]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "build", "dist"]
reportMissingTypeStubs = false
